# BlogWriter

blogwriter/: README.md  pyproject.toml
blogwriter/src/blogwriter/: crew.py  main.py
blogwriter/src/blogwriter/config/: agents.yaml  tasks.yaml
blogwriter/src/blogwriter/tools/: markdown_generator.py
