[project]
name = "blogwriter"
version = "0.1.0"
description = "blogwriter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
blogwriter = "blogwriter.main:run"
run_crew = "blogwriter.main:run"
train = "blogwriter.main:train"
replay = "blogwriter.main:replay"
test = "blogwriter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
